# acteur-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SCRACHPAD.md
examples/: actor_without_id.rs  basic.rs  count.rs  count_with_generic_type.rs  publish_subscribe.rs  respond_to_message.rs  statefull_service.rs  stateless_service.rs
examples/http/: Cargo.toml
examples/http/src/: main.rs
src/: actor.rs  actor_assistant.rs  actor_proxy.rs  actors_lifecycle_director.rs  actors_manager.rs  address_book.rs  assistant.rs  envelope.rs  facade.rs  handle.rs  lib.rs  main.rs  playing_with_raft.rs  system.rs  system_director.rs  utils.rs
src/actors/: actor.rs  assistant.rs  director.rs  envelope.rs  handle.rs  manager.rs  mod.rs  proxy.rs
src/services/: broker.rs  director.rs  envelope.rs  handle.rs  manager.rs  mod.rs  service.rs  system_facade.rs
