[package]
name = "acteur"
version = "0.2.0"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2018"
description = "An actor system that just works. Simple, robust, fast, documented."
license = "Apache-2.0/MIT"
homepage = "https://github.com/DavidBM/acteur-rs"
repository = "https://github.com/DavidBM/acteur-rs"
readme = "README.md"
keywords = ["actor", "messages", "actors", "async", "system"]
categories = ["asynchronous", "concurrency"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
async-std = { version = "1", features = ["unstable"]}
rand = "0.7"
dashmap = "3"
futures = "0.3"
