[package]
name = "acteur"
version = "0.12.2"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2018"
description = "A safe actor-like framework that just works. Simple, robust, fast, documented."
license = "Apache-2.0/MIT"
homepage = "https://github.com/DavidBM/acteur-rs"
repository = "https://github.com/DavidBM/acteur-rs"
readme = "README.md"
keywords = ["actor", "messages", "actors", "async", "system"]
categories = ["asynchronous", "concurrency"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
async-std = "1"
rand = "0.7"
dashmap = "3"
futures = "0.3"
lazy_static = "1"
futures-util = "0.3"
num_cpus = "1.13"
async-channel = "1"
